@@ -1,3 +1,10 @@
+2006-01-06  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Improved the placement of object. Fixed multiple gnucap component
+	for the rheostat
+
+	* src/boards/python/electric.py:
+
 2006-01-04  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Improved crane drawing with new arrow and a rope.
